# SpotifyAssort

spotify_assort/: .env  Cargo.toml
spotify_assort/.spotify_cache/: .spotify_token_cache.json
spotify_assort/src/: main.rs
spotify_assort/static/: style.css
spotify_assort/templates/: playlists.html.tera
