[package]
name = "spotify_assort"
version = "0.1.0"
edition = "2021"


[dependencies]
async-stream = { version = "0.3.2", optional = true }
async-trait = { version = "0.1.51", optional = true }
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
dotenv = { version = "0.15.0", optional = true }
futures = { version = "0.3.17", optional = true }
getrandom = "0.2.3"
log = "0.4.14"
maybe-async = "0.2.6"
serde = { version = "1.0.130", default-features = false }
serde_json = "1.0.67"
env_logger = "0.9.0"
sha2 = "0.9.6"
rspotify = {version = "0.11.3", features= ["cli", "env-file"]}
thiserror = "1.0.29"
url = "2.2.2"
webbrowser = { version = "0.5.5", optional = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }


[dev-dependencies]
env_logger = { version = "0.9.0", default-features = false }
tokio = { version = "1.11.0", features = ["full"] }
futures-util = "0.3.17"